delete useless files create LogRecord model make register_user middleware

--- a/example.toml
+++ b/example.toml
@@ -8,16 +8,15 @@ models = ["app.db.functions", "aerich.models"]
 use_persistent_storage = false
 
 [settings]
-owner_id = 441567171
+owner_id = 123
 throttling_rate = 0.5
 use_webhook = false
 use_pyrogram_client = false
 drop_pending_updates = false
 
 [math]
-MAX_MATRIX = 8
-MAX_VARS = 7
-MAX_MODULO = 1000000000000000 # 1e15
-MAX_ELEMENTS = 101
-FACTORIZE_MAX = 1000000000000 # 1e12
-
+max_matrix = 8
+max_vars = 7
+max_modulo = 1000000000000000 # 1e15
+max_elements = 101
+factorise_max = 1000000000000 # 1e12
